# svg-parser

./: .clang-format  CMakeLists.txt
include/: tokenizer.h
src/: main.c  tokenizer.c
